<resources>
    <string name="app_name">RatioG4</string>
    <string name="retour">Retour</string>

    <!-- Page Modifier Ratio -->
    <string name="titreVictoire">Win</string>
    <string name="titreDefaites">Lose</string>
    <string name="TextBoutonPlus">+</string>
    <string name="TextBoutonMoins">-</string>
    <string name="bouton_creer_ratio">NOUVEAU RATIO</string>
    <string name="bouton_stats">STATISTIQUES</string>
    <string name="boutonQuitter">Annuler</string>
    <string name="boutonValider">Enregistrer</string>
    <string name="hint_commentaire">Votre commentaire : </string>
</resources>
