<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatioActivity">

    <TextView
        android:id="@+id/ratio_titre_jeu"
        style="@style/titreJeu"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="254dp"
        android:layout_height="172dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratio_titre_jeu">

        <TextView
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="@string/titreVictoire"
            android:textSize="35sp" />

        <TextView
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="0"
            android:text="@string/titreDefaites"
            android:textSize="35sp" />

        <Button
            android:id="@+id/nb_victoires"
            style="@style/nbWinLose"
            android:layout_column="0"
            android:layout_row="2"
            android:background="#5eff00"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bouton_enleverWin"
            style="@style/gridElements"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/TextBoutonMoins" />

        <Button
            android:id="@+id/nb_defaites"
            style="@style/nbWinLose"
            android:layout_column="2"
            android:layout_row="2"
            android:background="#ff0000"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bouton_enleverLose"
            style="@style/gridElements"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/TextBoutonMoins" />
    </GridLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="362dp"
        android:layout_height="95dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_commentaire"
            android:layout_width="345dp"
            android:layout_height="80dp"
            android:hint="@string/hint_commentaire"
            android:maxLength="100"
            android:paddingHorizontal="10dp"
            android:paddingRight="20dp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="115dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/boutonValider"
            android:background="#09c20c"
            android:textColor="#ffffff"
            style="@style/boutonsRatios" />

        <Button
            android:id="@+id/btn_quitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/boutonsRatios"
            android:background="#690606"
            android:textColor="#ffffff"
            android:text="@string/boutonQuitter"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
